--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,34 @@
-// Начните писать стили здесь
+ //Global
+ @import "../global/variables.less";
+ @import "../global/fonts.less";
+ @import "../global/global.less";
+ @import "../buttons/button.less";
+
+ //Page
+ @import "../blocks/page.less";
+ @import "../blocks/page-header.less";
+ @import "../blocks/page-footer.less";
+
+ //Navigation
+ @import "../blocks/main-nav.less";
+
+ //Footer
+ @import "../blocks/contacts.less";
+ @import "../blocks/social.less";
+ @import "../blocks/copyright.less";
+
+ //Promo
+ @import "../blocks/promo.less";
+
+ //Features
+ @import "../blocks/features.less";
+ @import "../blocks/features-numbered.less";
+
+ //Photo
+ @import "../blocks/photo.less";
+ @import "../blocks/photo-card.less";
+
+ //Review
+ @import "../blocks/review.less";
+ @import "../blocks/review-form.less";
+
