--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,34 +1,31 @@
- //Global
- @import "../global/variables.less";
- @import "../global/fonts.less";
- @import "../global/global.less";
- @import "../buttons/button.less";
+//Global
+@import "../less/global/variables.less";
+@import "../less/global/fonts.less";
+@import "../less/global/global.less";
+@import "../less/buttons/button.less";
 
- //Page
- @import "../blocks/page.less";
- @import "../blocks/page-header.less";
- @import "../blocks/page-footer.less";
+//Page
+@import "../less/blocks/page.less";
+@import "../less/blocks/intro.less";
+@import "../less/blocks/top.less";
 
- //Navigation
- @import "../blocks/main-nav.less";
+//Navigation
+@import "../less/blocks/main-nav.less";
 
- //Footer
- @import "../blocks/contacts.less";
- @import "../blocks/social.less";
- @import "../blocks/copyright.less";
+//Footer
+@import "../less/blocks/contacts.less";
+@import "../less/blocks/social.less";
+@import "../less/blocks/copyright.less";
 
- //Promo
- @import "../blocks/promo.less";
+//Promo
+@import "../less/blocks/promo.less";
 
- //Features
- @import "../blocks/features.less";
- @import "../blocks/features-numbered.less";
+//Features
+@import "../less/blocks/features.less";
+@import "../less/blocks/features-numbered.less";
 
- //Photo
- @import "../blocks/photo.less";
- @import "../blocks/photo-card.less";
+//Photo
+@import "../less/blocks/photo-card.less";
 
- //Review
- @import "../blocks/review.less";
- @import "../blocks/review-form.less";
-
+//Review
+@import "../less/blocks/review-form.less";
