--- a/source/less/blocks/features-numbered.less
+++ b/source/less/blocks/features-numbered.less
@@ -1,16 +1,115 @@
 .features-numbered {
+  text-align: center;
   list-style: none;
+  background-color: @base-grey;
+  margin: 0;
+  padding: 0;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: row;
+  }
 
   &--accent {
     color: @white;
     background-color: @base-blue;
+
+    @media (min-width: @tablet-width) {
+      &:nth-child(4) {
+        flex-direction: row-reverse;
+      }
+    }
+  }
+}
+
+.features-numbered__item {
+  padding: 25px 20px;
+
+  @media (min-width: @tablet-width) {
+    width: 33%;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 }
 
 .features-numbered__title {
   font-size: 18px;
+  margin: 0;
+  margin-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 40px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 110px;
+  }
 }
 
 .features-numbered__description {
   font-size: 14px;
+  margin: 0;
+  margin-top: 20px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 50px;
+  }
+}
+
+.features-numbered__text {
+  padding-top: 35px;
+  padding-bottom: 35px;
+
+  @media (min-width: @tablet-width) {
+    width: 33%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+}
+
+.features-numbered__image {
+  min-height: 256px;
+
+  &--right {
+    background-image: url("../img/main-bridge-mobile@1x.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+
+    @media (min-width: @tablet-width) {
+      width: 67%;
+      background-image: url("../img/main-bridge-tablet@1x.jpg");
+      background-position: left;
+      background-repeat: no-repeat;
+    }
+
+    @media (min-width: @desktop-width) {
+      background-image: url("../img/main-bridge-desktop@1x.jpg");
+    }
+  }
+
+  &--left {
+    background-image: url("../img/main-city-mobile@1x.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+
+    @media (min-width: @tablet-width) {
+      width: 67%;
+      background-image: url("../img/main-city-tablet@1x.jpg");
+      background-position: right;
+      background-repeat: no-repeat;
+    }
+
+    @media (min-width: @desktop-width) {
+      background-image: url("../img/main-city-desktop@1x.jpg");
+    }
+  }
 }
