--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -4,4 +4,13 @@
   background-position: center;
   background-repeat: no-repeat;
   background-color: @base-blue;
+
+  @media (min-width: @tablet-width) {
+    min-height: 518px;
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+  }
+
+  @media (min-width: @desktop-width) {
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+  }
 }
