--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,13 +1,28 @@
+.main-nav__wrapper {
+  @media (min-width: @tablet-width) {
+    display: flex;
+  }
+}
+
 .main-nav__list {
+  margin: 0;
+  padding: 0;
   list-style: none;
   text-transform: uppercase;
   font-weight: 700;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    width: 100%;
+    margin: 0;
+  }
 }
 
 .main-nav__item {
   text-align: center;
   color: @white;
   background-color: @base-blue;
+  padding: 20px 0;
 
   &:hover,
   &:focus {
@@ -17,6 +32,22 @@
   &:active {
     background-color: @dark-blue;
   }
+
+  @media (min-width: @tablet-width) {
+    width: 25%;
+    color: @black;
+    font-size: 14px;
+    background-color: @white;
+
+    &:hover,
+    &:focus {
+      background-color: @white;
+    }
+
+    &:active {
+      background-color: @white;
+    }
+  }
 }
 
 .main-nav__item-link {
@@ -25,5 +56,19 @@
 
   &:active {
     color: @white-30;
+  }
+
+  @media (min-width: @tablet-width) {
+    color: @black;
+    font-size: 14px;
+
+    &:hover,
+    &:focus {
+      color: @base-blue;
+    }
+
+    &:active {
+      color: @black-30;
+    }
   }
 }
