--- a/source/less/blocks/photo-card.less
+++ b/source/less/blocks/photo-card.less
@@ -1,12 +1,55 @@
 .photo-card {
+  display: flex;
   font-size: 14px;
+  border-bottom: 1px solid @grey;
+  padding: 20px 0;
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+    border: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    position: relative;
+  }
 }
 
 .photo__title {
   text-transform: uppercase;
   font-weight: 700;
+  margin: 0;
+}
+
+.photo__author {
+  margin: 0;
 }
 
 .photo__like-number {
   font-weight: 700;
+}
+
+.photo__container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.photo__container figcaption {
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    background-color: @light-grey;
+    padding: 20px 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: @black-30;
+    color: @white;
+  }
 }
