--- a/source/less/blocks/review-form.less
+++ b/source/less/blocks/review-form.less
@@ -1,33 +1,139 @@
-.review-form__wrapper {
-  border: none;
+.review-form {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
 
-.review-form__wrapper ul {
-  list-style: none;
+.review-form__fieldset {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 65px 20px 0;
+  border: none;
+  border-top: 1px solid @grey;
+
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    padding: 65px 0 60px;
+    border: 0;
+    margin: 0;
+  }
+
+  &--personal {
+    @media (min-width: @tablet-width) {
+      width: 50%;
+    }
+  }
+
+  &--impression {
+    @media (min-width: @tablet-width) {
+      order: -1;
+      width: 50%;
+    }
+  }
+}
+
+.review-form__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  &--contacts {
+    width: 100%;
+  }
+
+  &--sights {
+    width: 46%;
+    margin: 0 auto;
+    padding: 0;
+
+    @media (min-width: @desktop-width) {
+      width: 100%;
+    }
+  }
+}
+
+.review-form__submit {
+  padding: 50px 20px;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    padding: 60px 0;
+  }
 }
 
 .review-form__title {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  right: 0;
   font-size: 18px;
   font-weight: 700;
   text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 15px;
+
+  &--personal {
+    @media (min-width: @tablet-width) {
+      text-align: left;
+    }
+  }
+
+  &--impression {
+    @media (min-width: @tablet-width) {
+      text-align: left;
+    }
+  }
 }
 
-.review-form__item label {
+.review-form__item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 0;
+  margin-bottom: 15px;
+
+  &--contacts {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+
+    @media (min-width: @desktop-width) {
+      width: auto;
+      flex-direction: row;
+    }
+  }
+}
+
+.review-form__label {
   font-size: 14px;
   text-transform: uppercase;
+  margin-right: 15px;
+
+  &--contacts {
+    margin-bottom: 10px;
+  }
 }
 
-.review-form__radio,
-.review-form__checkbox {
-  font-weight: 700;
-}
-
-.review-form__wrapper input {
+.review-form__input {
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 16px;
   font-weight: bold;
   background-color: @light-grey;
   border: @light-grey 4px solid;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 16px 20px;
 
   &:focus {
     background-color: @white;
@@ -36,7 +142,17 @@
   }
 }
 
-.review-form__wrapper textarea {
+.review-form__radio-label {
+  font-weight: 700;
+}
+
+.review-form__checkbox-label {
+  font-weight: 700;
+}
+
+.review-form__area {
+  box-sizing: border-box;
+  width: 100%;
   height: 160px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
@@ -48,5 +164,25 @@
     background-color: @white;
     border: @light-grey 4px solid;
     outline: none;
+  }
+}
+
+.review-form__button {
+  width: 100%;
+  padding: 15px 0;
+
+  @media (min-width: @tablet-width) {
+    width: auto;
+    padding: 15px 60px;
+  }
+}
+
+.review-form__legend {
+  display: none;
+  text-transform: uppercase;
+  font-size: 14px;
+
+  @media (min-width: @tablet-width) {
+    display: inline;
   }
 }
