--- a/source/less/blocks/top.less
+++ b/source/less/blocks/top.less
@@ -4,4 +4,18 @@
   background-position: center;
   background-repeat: no-repeat;
   background-color: @base-blue;
+
+  @media (min-width: @tablet-width) {
+    min-height: 518px;
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  @media (min-width: @desktop-width) {
+    min-height: 518px;
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+  }
 }
