--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -3,7 +3,10 @@
 @white: #ffffff;
 @black: #000000;
 @light-grey: #F2F2F2;
+@base-grey: #eeeeee;
 @grey: #E5E5E5;
+@grey-2: #D6D6D6;
+@grey-3: #E6E6E6;
 @mid-grey: #D5D5D5;
 @dark-grey: #333333;
 @black-grey: #666666;
@@ -16,8 +19,15 @@
 @white-30: fade(@white, 30%);
 @white-60: fade(@white, 60%);
 @black-30: fade(@black, 30%);
+@black-60: fade(@black, 60%);
 @base-brown-30: fade(@base-brown, 30%);
 @base-blue-30: fade(@base-blue, 30%);
 @base-blue-60: fade(@base-blue, 60%);
 @dark-grey-30: fade(@dark-grey, 30%);
 @black-grey-60: fade(@black-grey, 60%);
+
+//Viewports
+
+@tablet-width: 768px;
+@desktop-width: 1024px;
+@mobile-width: 767px;
