--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,6 +6,8 @@
 
 //Page
 @import "../less/blocks/page.less";
+@import "../less/blocks/page-header.less";
+@import "../less/blocks/page-footer.less";
 @import "../less/blocks/intro.less";
 @import "../less/blocks/top.less";
 
@@ -19,13 +21,19 @@
 
 //Promo
 @import "../less/blocks/promo.less";
+@import "../less/blocks/search.less";
+@import "../less/blocks/map.less";
 
 //Features
 @import "../less/blocks/features.less";
 @import "../less/blocks/features-numbered.less";
 
-//Photo
+//Photo&Video
+@import "../less/blocks/photo.less";
 @import "../less/blocks/photo-card.less";
+@import "../less/blocks/video.less";
+
 
 //Review
+@import "../less/blocks/review.less";
 @import "../less/blocks/review-form.less";
