--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -3,9 +3,6 @@
 }
 
 .features__list {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -16,8 +13,6 @@
     display: flex;
     flex-direction: row;
     text-align: center;
-    margin: 0;
-    padding: 0;
   }
 }
 
@@ -29,9 +24,10 @@
   @media (min-width: @tablet-width) {
     width: 33%;
     margin: 0;
-    padding: 0 32px;
     padding-top: 160px;
     padding-bottom: 60px;
+    padding-left: 32px;
+    padding-right: 32px;
 
     &:nth-child(2) {
       order: 1;
@@ -39,9 +35,10 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 0 50px;
     padding-top: 160px;
     padding-bottom: 60px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
 }
 
