--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,6 +1,7 @@
 .intro {
   min-height: 389px;
   background-image: url("../img/bg-back-mobile@1x.jpg");
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-color: @base-blue;
