--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,9 +1,3 @@
-.main-nav__wrapper {
-  @media (min-width: @tablet-width) {
-    display: flex;
-  }
-}
-
 .main-nav__list {
   margin: 0;
   padding: 0;
@@ -13,16 +7,13 @@
 
   @media (min-width: @tablet-width) {
     display: flex;
-    width: 100%;
     margin: 0;
   }
 }
 
 .main-nav__item {
   text-align: center;
-  color: @white;
   background-color: @base-blue;
-  padding: 20px 0;
 
   &:hover,
   &:focus {
@@ -35,8 +26,6 @@
 
   @media (min-width: @tablet-width) {
     width: 25%;
-    color: @black;
-    font-size: 14px;
     background-color: @white;
 
     &:hover,
@@ -51,8 +40,10 @@
 }
 
 .main-nav__item-link {
+  display: block;
   color: @white;
   text-decoration: none;
+  padding: 20px 0;
 
   &:active {
     color: @white-30;
