--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,6 +1,7 @@
 .map {
   min-height: 350px;
   background-image: url("../img/bg-map-mobile@1x.jpg");
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-color: @base-blue;
@@ -8,18 +9,12 @@
 
 @media (min-width: @tablet-width) {
   .map {
-    min-height: 350px;
     background-image: url("../img/bg-map-tablet@1x.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
   }
 }
 
 @media (min-width: @desktop-width) {
   .map {
-    min-height: 350px;
     background-image: url("../img/bg-map-desktop@1x.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
   }
 }
