--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -1,10 +1,13 @@
 .photo {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
   @media (min-width: @tablet-width) {
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: flex-start;
+    padding: 0 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0;
   }
 }
