--- a/source/less/blocks/top.less
+++ b/source/less/blocks/top.less
@@ -1,6 +1,7 @@
 .top {
   min-height: 389px;
   background-image: url("../img/bg-back-mobile@1x.jpg");
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-color: @base-blue;
@@ -8,14 +9,9 @@
   @media (min-width: @tablet-width) {
     min-height: 518px;
     background-image: url("../img/bg-back-tablet@1x.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
   }
 
   @media (min-width: @desktop-width) {
-    min-height: 518px;
     background-image: url("../img/bg-back-desktop@1x.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
   }
 }
