--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -28,10 +28,6 @@
     padding-bottom: 60px;
     padding-left: 32px;
     padding-right: 32px;
-
-    &:nth-child(2) {
-      order: 1;
-    }
   }
 
   @media (min-width: @desktop-width) {
@@ -39,6 +35,12 @@
     padding-bottom: 60px;
     padding-left: 50px;
     padding-right: 50px;
+  }
+
+  &--souveniers {
+    @media (min-width: @tablet-width) {
+      order: 1;
+    }
   }
 }
 
