--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,5 +1,15 @@
+.contacts {
+  padding: 15px 0;
+  vertical-align: middle;
+}
+
 .contacts__hashtag {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 21px;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 30px;
+  }
 }
