--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,3 +1,26 @@
+.copyright {
+  display: flex;
+  justify-content: center;
+  padding: 15px 0;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 30px;
+  }
+}
+
 .copyright__text {
   text-transform: uppercase;
+  margin: 0;
+  margin-top: 3px;
+  margin-right: 15px;
+}
+
+.copyright__link {
+  &:hover {
+    fill: @base-blue;
+  }
+
+  &:active {
+    fill: @black-30;
+  }
 }
