--- a/source/less/blocks/features-numbered.less
+++ b/source/less/blocks/features-numbered.less
@@ -20,6 +20,33 @@
       flex-direction: row-reverse;
     }
   }
+
+  &--top {
+    position: relative;
+    padding-top: 35px;
+
+    &::before {
+      display: block;
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 37px;
+      z-index: 2;
+      background-image: url("../img/bg-triangle.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    @media (min-width: @tablet-width) {
+      padding-top: 0;
+
+      &::before {
+        display: none;
+      }
+    }
+  }
 }
 
 .features-numbered__item {
