--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,5 +1,7 @@
 .intro {
-  min-height: 389px;
+  position: relative;
+  padding-top: 90px;
+  padding-bottom: 85px;
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-size: cover;
   background-position: center;
@@ -7,11 +9,46 @@
   background-color: @base-blue;
 
   @media (min-width: @tablet-width) {
-    min-height: 518px;
+    padding-top: 77px;
+    padding-bottom: 90px;
     background-image: url("../img/bg-back-tablet@1x.jpg");
   }
 
   @media (min-width: @desktop-width) {
     background-image: url("../img/bg-back-desktop@1x.jpg");
+  }
+
+  &::after {
+    display: block;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 26px;
+    background-image: url("../img/bg-intro-triangle-mobile.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    @media (min-width: @tablet-width) {
+      height: 57px;
+      background-image: url("../img/bg-intro-triangle-tablet.svg");
+    }
+
+    @media (min-width: @desktop-width) {
+      background-image: url("../img/bg-intro-triangle-desktop.svg");
+    }
+  }
+}
+
+.intro__image {
+  display: block;
+  margin: 0 auto;
+  width: 282px;
+  height: 214px;
+
+  @media (min-width: @tablet-width) {
+    width: 461px;
+    height: 350px;
   }
 }
