--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,3 +1,12 @@
+.main-nav {
+  position: relative;
+  padding-bottom: 56px;
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 0;
+  }
+}
+
 .main-nav__list {
   margin: 0;
   padding: 0;
@@ -7,12 +16,15 @@
 
   @media (min-width: @tablet-width) {
     display: flex;
+    justify-content: space-between;
   }
 }
 
 .main-nav__item {
   text-align: center;
   background-color: @base-blue;
+  border-top: 1px solid #9ac2db;
+  border-bottom: 1px solid #678fa8;
 
   &:hover,
   &:focus {
@@ -24,8 +36,9 @@
   }
 
   @media (min-width: @tablet-width) {
-    width: 25%;
+    width: 20%;
     background-color: @white;
+    border: none;
 
     &:hover,
     &:focus {
@@ -60,5 +73,76 @@
     &:active {
       color: @black-30;
     }
+  }
+}
+
+.main-nav__toggle {
+  position: absolute;
+  display: block;
+  top: 0;
+  right: 0;
+  width: 56px;
+  height: 56px;
+  border: none;
+  background-color: transparent;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 17px;
+  right: 20px;
+  width: 23px;
+  height: 4px;
+  background-color: @base-blue;
+  box-shadow: 0 9px 0 0 @base-blue, 0 19px 0 0 @base-blue;
+}
+
+.main-nav--closed .main-nav__toggle:hover::before {
+  background-color: fade(@base-blue, 60%);
+  box-shadow: 0 9px 0 0 fade(@base-blue, 60%), 0 19px 0 0 fade(@base-blue, 60%);
+}
+
+.main-nav--closed .main-nav__toggle:active::before {
+  background-color: fade(@base-blue, 30%);
+  box-shadow: 0 9px 0 0 fade(@base-blue, 30%), 0 19px 0 0 fade(@base-blue, 30%);
+}
+
+.main-nav--opened .main-nav__toggle {
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 30px;
+    right: 20px;
+    width: 30px;
+    height: 4px;
+    background-color: @white;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+}
+
+.main-nav--opened .main-nav__list::after {
+  content: "";
+  position: absolute;
+  bottom: 56px;
+  width: 100%;
+  height: 10px;
+  box-shadow: inset 0 -6px 6px 0 fade(#000000, 20%);
+
+  @media (min-width: @tablet-width) {
+    display: none;
   }
 }
