--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,4 +1,5 @@
 .map {
+  position: relative;
   min-height: 350px;
   background-image: url("../img/bg-map-mobile@1x.jpg");
   background-size: cover;
@@ -12,5 +13,18 @@
 
   @media (min-width: @desktop-width) {
     background-image: url("../img/bg-map-desktop@1x.jpg");
+  }
+
+  &::before {
+    display: block;
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 27px;
+    height: 27px;
+    background-image: url("../img/icon-map-marker.svg");
+    background-repeat: no-repeat;
   }
 }
