--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -2,9 +2,8 @@
   text-align: center;
 
   @media (min-width: @tablet-width) {
-    display: flex;
-    flex-direction: row;
-    align-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     padding-left: 60px;
     padding-right: 60px;
   }
