--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -55,3 +55,27 @@
     color: @white;
   }
 }
+
+.photo__like {
+  position: relative;
+  width: 25px;
+  height: 25px;
+  border: none;
+  background: transparent;
+  margin-right: 10px;
+
+  @media (min-width: @tablet-width) {
+    margin-right: 0;
+  }
+}
+
+.photo__like-icon {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  fill: @black-30;
+
+  @media (min-width: @desktop-width) {
+    fill: @white;
+  }
+}
