--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,3 +1,37 @@
-.social ul {
+.social {
+  padding: 15px 0;
+
+  @media (min-width: @tablet-width) {
+    padding: 36px 0;
+  }
+}
+
+.social__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   list-style: none;
+  padding: 0;
+  margin: 0 auto;
+}
+
+.social__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 46px;
+  height: 48px;
+  background-color: @base-blue;
+  fill: @white;
+  margin-right: 3px;
+  margin-left: 3px;
+
+  &:hover {
+    background-color: @mid-blue;
+  }
+
+  &:active {
+    fill: @white-30;
+    background-color: @dark-blue;
+  }
 }
