--- a/source/less/blocks/top.less
+++ b/source/less/blocks/top.less
@@ -1,5 +1,7 @@
 .top {
-  min-height: 389px;
+  position: relative;
+  padding-top: 52px;
+  padding-bottom: 67px;
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-size: cover;
   background-position: center;
@@ -7,11 +9,48 @@
   background-color: @base-blue;
 
   @media (min-width: @tablet-width) {
-    min-height: 518px;
+    padding-top: 95px;
+    padding-bottom: 117px;
     background-image: url("../img/bg-back-tablet@1x.jpg");
   }
 
   @media (min-width: @desktop-width) {
+    padding-top: 107px;
+    padding-bottom: 120px;
     background-image: url("../img/bg-back-desktop@1x.jpg");
+  }
+
+  &::after {
+    display: block;
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 26px;
+    background-image: url("../img/bg-intro-triangle-mobile.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    @media (min-width: @tablet-width) {
+      height: 57px;
+      background-image: url("../img/bg-intro-triangle-tablet.svg");
+    }
+
+    @media (min-width: @desktop-width) {
+      background-image: url("../img/bg-intro-triangle-desktop.svg");
+    }
+  }
+}
+
+.top__image {
+  display: block;
+  margin: 0 auto;
+  width: 229px;
+  height: 39px;
+
+  @media (min-width: @tablet-width) {
+    width: 460px;
+    height: 78px;
   }
 }
