--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,6 +1,7 @@
 .contacts {
-  padding: 15px 0;
-  vertical-align: middle;
+  @media (max-width: @tablet-width) {
+    padding: 15px 0;
+  }
 }
 
 .contacts__hashtag {
@@ -8,8 +9,4 @@
   font-weight: 700;
   font-size: 21px;
   margin: 0;
-
-  @media (min-width: @tablet-width) {
-    margin-top: 30px;
-  }
 }
