--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,10 +1,13 @@
 .copyright {
   display: flex;
   justify-content: center;
-  padding: 15px 0;
+
+  @media (max-width: @tablet-width) {
+    padding: 15px 0;
+  }
 
   @media (min-width: @tablet-width) {
-    margin-top: 30px;
+    margin-top: 10px;
   }
 }
 
