--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -48,8 +48,7 @@
     width: 40px;
     height: 40px;
     content: "";
-    background-color: @base-blue;
-    mask-repeat: no-repeat;
+    background-repeat: no-repeat;
 
     @media (min-width: @tablet-width) {
       left: 50%;
@@ -62,11 +61,11 @@
 
   &--accomodation {
     &::before {
-      mask-image: url("../img/icon-house.svg");
-      mask-size: 39px 37px;
+      background-image: url("../img/icon-house.svg");
+      background-size: 39px 37px;
 
       @media (min-width: @tablet-width) {
-        mask-size: 75px 72px;
+        background-size: 75px 72px;
       }
     }
   }
@@ -77,22 +76,22 @@
     }
 
     &::before {
-      mask-image: url("../img/icon-gift.svg");
-      mask-size: 32px 38px;
+      background-image: url("../img/icon-gift.svg");
+      background-size: 32px 38px;
 
       @media (min-width: @tablet-width) {
-        mask-size: 76px 68px;
+        background-size: 76px 68px;
       }
     }
   }
 
   &--food {
     &::before {
-      mask-image: url("../img/icon-burger.svg");
-      mask-size: 40px 34px;
+      background-image: url("../img/icon-burger.svg");
+      background-size: 40px 34px;
 
       @media (min-width: @tablet-width) {
-        mask-size: 64px 75px;
+        background-size: 64px 75px;
       }
     }
   }
