--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -91,28 +91,7 @@
   }
 }
 
-.main-nav--closed .main-nav__toggle::before {
-  content: "";
-  position: absolute;
-  top: 17px;
-  right: 20px;
-  width: 23px;
-  height: 4px;
-  background-color: @base-blue;
-  box-shadow: 0 9px 0 0 @base-blue, 0 19px 0 0 @base-blue;
-}
-
-.main-nav--closed .main-nav__toggle:hover::before {
-  background-color: fade(@base-blue, 60%);
-  box-shadow: 0 9px 0 0 fade(@base-blue, 60%), 0 19px 0 0 fade(@base-blue, 60%);
-}
-
-.main-nav--closed .main-nav__toggle:active::before {
-  background-color: fade(@base-blue, 30%);
-  box-shadow: 0 9px 0 0 fade(@base-blue, 30%), 0 19px 0 0 fade(@base-blue, 30%);
-}
-
-.main-nav--opened .main-nav__toggle {
+.main-nav .main-nav__toggle {
   &::before,
   &::after {
     content: "";
@@ -134,7 +113,7 @@
   }
 }
 
-.main-nav--opened .main-nav__list::after {
+.main-nav .main-nav__list::after {
   content: "";
   position: absolute;
   bottom: 56px;
@@ -143,6 +122,38 @@
   box-shadow: inset 0 -6px 6px 0 fade(#000000, 20%);
 
   @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 17px;
+  right: 20px;
+  width: 23px;
+  height: 4px;
+  background-color: @base-blue;
+  box-shadow: 0 9px 0 0 @base-blue, 0 19px 0 0 @base-blue;
+  transform: revert;
+
+  &:hover {
+    background-color: fade(@base-blue, 60%);
+    box-shadow: 0 9px 0 0 fade(@base-blue, 60%), 0 19px 0 0 fade(@base-blue, 60%);
+  }
+
+  &:active {
+    background-color: fade(@base-blue, 30%);
+    box-shadow: 0 9px 0 0 fade(@base-blue, 30%), 0 19px 0 0 fade(@base-blue, 30%);
+  }
+}
+
+.main-nav--closed .main-nav__toggle::after {
+  display: none;
+}
+
+@media (max-width: @tablet-width) {
+  .main-nav--closed .main-nav__list {
     display: none;
   }
 }
