--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -4,8 +4,8 @@
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    padding-left: 60px;
-    padding-right: 60px;
+    align-items: center;
+    padding: 36px 60px;
   }
 
   @media (min-width: @desktop-width) {
