--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,8 +1,6 @@
 .social {
-  padding: 15px 0;
-
-  @media (min-width: @tablet-width) {
-    padding: 36px 0;
+  @media (max-width: @tablet-width) {
+    padding: 15px 0;
   }
 }
 
