--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -9,6 +9,7 @@
 
   @media (min-width: @desktop-width) {
     padding: 0;
+    justify-content: center;
   }
 }
 
@@ -34,6 +35,10 @@
     flex-direction: column;
     margin: 0;
   }
+}
+
+.photo__container-image {
+  display: block;
 }
 
 .photo__container-text {
