--- a/source/less/blocks/features-numbered.less
+++ b/source/less/blocks/features-numbered.less
@@ -116,24 +116,48 @@
   &--right {
     background-image: url("../img/main-bridge-mobile@1x.jpg");
 
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/main-bridge-mobile@2x.jpg");
+    }
+
     @media (min-width: @tablet-width) {
       background-image: url("../img/main-bridge-tablet@1x.jpg");
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/main-bridge-tablet@2x.jpg");
+      }
     }
 
     @media (min-width: @desktop-width) {
       background-image: url("../img/main-bridge-desktop@1x.jpg");
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/main-bridge-desktop@2x.jpg");
+      }
     }
   }
 
   &--left {
     background-image: url("../img/main-city-mobile@1x.jpg");
 
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/main-city-mobile@2x.jpg");
+    }
+
     @media (min-width: @tablet-width) {
       background-image: url("../img/main-city-tablet@1x.jpg");
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/main-city-tablet@2x.jpg");
+      }
     }
 
     @media (min-width: @desktop-width) {
       background-image: url("../img/main-city-desktop@1x.jpg");
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/main-city-desktop@2x.jpg");
+      }
     }
   }
 }
