--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -7,12 +7,24 @@
   background-repeat: no-repeat;
   background-color: @base-blue;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/bg-map-mobile@2x.jpg");
+  }
+
   @media (min-width: @tablet-width) {
     background-image: url("../img/bg-map-tablet@1x.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/bg-map-tablet@2x.jpg");
+    }
   }
 
   @media (min-width: @desktop-width) {
     background-image: url("../img/bg-map-desktop@1x.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/bg-map-desktop@2x.jpg");
+    }
   }
 
   &::before {
