--- a/source/less/blocks/top.less
+++ b/source/less/blocks/top.less
@@ -8,16 +8,28 @@
   background-repeat: no-repeat;
   background-color: @base-blue;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+  }
+
   @media (min-width: @tablet-width) {
     padding-top: 95px;
     padding-bottom: 117px;
     background-image: url("../img/bg-back-tablet@1x.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+    }
   }
 
   @media (min-width: @desktop-width) {
     padding-top: 107px;
     padding-bottom: 120px;
     background-image: url("../img/bg-back-desktop@1x.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+    }
   }
 
   &::after {
