--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,6 +10,7 @@
 @import "../less/blocks/page-footer.less";
 @import "../less/blocks/intro.less";
 @import "../less/blocks/top.less";
+@import "../less/blocks/page-modal.less";
 
 //Navigation
 @import "../less/blocks/main-nav.less";
