--- a/source/less/blocks/page-modal.less
+++ b/source/less/blocks/page-modal.less
@@ -12,21 +12,17 @@
   line-height: 26px;
   background-color: @white;
   box-shadow: 0 15px 20px fade(@black, 20%);
-}
 
-.page-modal__sent {
-  @media (min-width: @tablet-width) {
-    width: 640px;
+  &--sent {
+    @media (min-width: @tablet-width) {
+      width: 640px;
+    }
   }
 
-  &--show {
-    display: block;
-  }
-}
-
-.page-modal__error {
-  @media (min-width: @tablet-width) {
-    width: 400px;
+  &--error {
+    @media (min-width: @tablet-width) {
+      width: 400px;
+    }
   }
 
   &--show {
