--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,12 +1,19 @@
 .contacts {
-  @media (max-width: @tablet-width) {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 21px;
+
+  @media (max-width: @mobile-width-only) {
+    text-align: center;
     padding: 15px 0;
   }
 }
 
 .contacts__hashtag {
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 21px;
   margin: 0;
+  margin-top: 15px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 0;
+  }
 }
