--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,9 +1,13 @@
 .copyright {
+  justify-content: flex-end;
+  font-size: 14px;
+  line-height: 26px;
+  text-transform: uppercase;
   display: flex;
-  justify-content: center;
 
-  @media (max-width: @tablet-width) {
-    padding: 15px 0;
+  @media (max-width: @mobile-width-only) {
+    justify-content: center;
+    padding: 24px 0;
   }
 
   @media (min-width: @tablet-width) {
@@ -12,9 +16,8 @@
 }
 
 .copyright__text {
-  text-transform: uppercase;
   margin: 0;
-  margin-top: 3px;
+  margin-top: 4px;
   margin-right: 15px;
 }
 
