--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -62,13 +62,37 @@
       background-color: @white;
     }
   }
+
+  &--left {
+    @media (min-width: @tablet-width) {
+      text-align: left;
+      padding-left: 29px;
+      margin-right: auto;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding-left: 70px;
+    }
+  }
+
+  &--right {
+    @media (min-width: @tablet-width) {
+      text-align: right;
+      padding-right: 21px;
+      margin-left: auto;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding-right: 67px;
+    }
+  }
 }
 
 .main-nav__item-link {
   display: block;
   color: @white;
   text-decoration: none;
-  padding: 20px 0;
+  padding: 14px 0;
 
   &:active {
     color: @white-30;
@@ -77,6 +101,7 @@
   @media (min-width: @tablet-width) {
     color: @black;
     font-size: 14px;
+    padding: 15px 0;
 
     &:hover,
     &:focus {
@@ -111,8 +136,8 @@
   &::after {
     content: "";
     position: absolute;
-    top: 30px;
-    right: 20px;
+    top: 26px;
+    right: 7px;
     width: 30px;
     height: 4px;
     background-color: @white;
@@ -158,7 +183,7 @@
   }
 
   .main-nav__list {
-    @media (max-width: @tablet-width) {
+    @media (max-width: @mobile-width-only) {
       display: none;
     }
   }
