--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,15 +1,14 @@
 .page-footer {
-  text-align: center;
+  padding: 10px 0;
 
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
-    padding: 36px 60px;
+    padding: 34px 60px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-left: 120px;
-    padding-right: 120px;
+    padding: 34px 120px;
   }
 }
