--- a/source/less/blocks/photo-card.less
+++ b/source/less/blocks/photo-card.less
@@ -3,6 +3,8 @@
   font-size: 14px;
   border-bottom: 1px solid @grey;
   padding: 20px 0;
+  padding-top: 22px;
+  padding-bottom: 11px;
 
   @media (min-width: @tablet-width) {
     padding: 0;
