--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,26 +1,100 @@
 .promo {
   text-align: center;
   text-transform: uppercase;
-  padding: 30px 15px;
+  line-height: 26px;
+  padding: 15px 16px;
 
   @media (min-width: @tablet-width) {
     padding: 30px 120px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 30px 340px;
+    padding: 0 340px;
+  }
+
+  &--photo {
+    line-height: 24px;
+    padding: 12px 15px 30px;
+
+    @media (min-width: @tablet-width) {
+      padding: 52px 161px;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding: 75px 377px 37px;
+    }
+  }
+
+  &--review {
+    line-height: 24px;
+    padding: 17px 14px;
+
+    @media (min-width: @tablet-width) {
+      padding: 45px 162px;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding: 50px 380px 0;
+    }
   }
 }
 
 .promo__title {
   font-size: 18px;
   font-weight: 700;
-  padding: 0 10px;
-  margin: 0;
-  margin-bottom: 40px;
+  line-height: 26px;
+  padding: 0 8px;
+  margin-top: 17px;
+  margin-bottom: 30px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 21px;
+    margin-top: 10px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 55px;
+  }
+
+  &--photo {
+    margin-top: 19px;
+    margin-bottom: 30px;
+
+    @media (min-width: @tablet-width) {
+      font-size: 30px;
+      margin-top: 12px;
+      margin-bottom: 33px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-top: 25px;
+    }
+  }
+
+  &--review {
+    margin-top: 18px;
+    margin-bottom: 28px;
+
+    @media (min-width: @tablet-width) {
+      font-size: 30px;
+      margin-bottom: 33px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-top: 63px;
+    }
+  }
 }
 
 .promo__description {
   font-size: 14px;
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 25px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 43px;
+  }
 }
